--- a/summaries/syscom/mit/physikalische_grundlagen.mdx
+++ b/summaries/syscom/mit/physikalische_grundlagen.mdx
@@ -53,7 +53,7 @@ Nyquist sagt uns Signalrate $S$ (Parameterwechsel pro Sekunde) $S_{max} [Hz] = 2
 6. quaternary PSK: kodier 2 bits in 4 Phases.
 7. _Quadrature Amplitude Modulation_ (QAM): Mach Amplitude und Phase zusammen. $16-QAM$ (4 bits werden zu einem _signal_)
 
-Natürlich haben wir alle den gleichen Raum und hören deswegen zwangsweise bei anderen mit. Dieses _noise_ interferiert leider mit unseren schönen Wellen und manchmal nuked es sie auch einfach komplett. $\text{SNR} = S / N$ ist die Signal-to-noise ratio in dezibel $\text{SNR}_{\text{db}} = 10 \cdot \log_10(S/N)$.
+Natürlich haben wir alle den gleichen Raum und hören deswegen zwangsweise bei anderen mit. Dieses _noise_ interferiert leider mit unseren schönen Wellen und manchmal nuked es sie auch einfach komplett. $\text{SNR} = S / N$ ist die Signal-to-noise ratio in dezibel $\text{SNR}_{\text{db}} = 10 \cdot \log_{10}(S/N)$.
 
 Und Shannon sagt dann mal wieder $R_{max} [bit/s] = B [Hz] \cdot log_2 (1 + S/N) [bit]$.
 
