--- a/summaries/syscom/mit/physikalische_grundlagen.mdx
+++ b/summaries/syscom/mit/physikalische_grundlagen.mdx
@@ -91,7 +91,7 @@ _Multiplexing_ wir senden mit verschieden Wellenparameter. Sodass nicht jeder mi
 
 1. Frequency: Wir teilen das gesamte Spektrum in verschiedene channel ein. Statisch in der Spezifikationen beschrieben
 
-	1.5. _Orthogonal Frequency Division Multiplexing (OFDM)_: teilt den Frequenzbereich auch ein aber in mehrere Überlappende Bereiche hier können wir dann die anderen multiplexing Sachen auch noch anwenden und bekommen ein halbwegs gute Verbindung aber auch nicht unnötigen Ineffizenzen.
+	1.5. _Orthogonal Frequency Division Multiplexing (OFDM)_: teilt den Frequenzbereich auch ein aber in mehrere Überlappende Bereiche hier können wir dann die anderen multiplexing Sachen auch noch anwenden und bekommen eine halbwegs gute Verbindung aber auch nicht unnötige Ineffizenzen.
 
 2. Time: Nur einer sendet Gleichzeitig (Einteilung in Timeslots). Frage: Wann senden wir?
 
