--- a/summaries/syscom/mit/mac.mdx
+++ b/summaries/syscom/mit/mac.mdx
@@ -27,7 +27,7 @@ Ethernet hat das altbekannte Carrier Sense Multiple Access/Collision Detection (
 
 ## Centralized
 
-Eine Station übernimmt die kontrolle und verteil Medium Access an andere
+Eine Station übernimmt die kontrolle und verteilt Medium Access an andere
 
 ### Contention-based
  
