--- a/summaries/syscom/mit/wlan.mdx
+++ b/summaries/syscom/mit/wlan.mdx
@@ -101,8 +101,7 @@ in 802.11b bleibt es eigentlich genau so nur das wir halt
 ### 802.11a
 Wir verschmelzen ein bisschen den nächsten Schritt mit dem hier
 
-!> Wichtig ist, dass die Synchronization + SFD immer in 1 Mbit/s übertragen wird. Egal ob ich danach mit 48GBit WIFI 7 baller.
-!> Der Rest des Header wird eigentlich auch immer in 1 Mbit übertragen, außer beim Optimierten Shot-Frame-Format von 802.11b (da mit 2bit)
+!> Wichtig ist, dass die Synchronization + SFD immer in 1 Mbit/s übertragen wird. Egal ob ich danach mit 48GBit WIFI 7 baller. Der Rest des Header wird eigentlich auch immer in 1 Mbit übertragen, außer beim Optimierten Shot-Frame-Format von 802.11b (da mit 2bit)
 
 ?> Warum? 
 
