--- a/summaries/syscom/mit/wlan.mdx
+++ b/summaries/syscom/mit/wlan.mdx
@@ -105,7 +105,7 @@ Wir verschmelzen ein bisschen den nächsten Schritt mit dem hier
 
 ?> Warum? 
 
-Na weil wir diesen Physikalischem Header wirklich null plan haben von den Restlichen Headern. Wir wüssten also auch nicht, ob wir oder wer anderes Adressiert wurde. Deswegen setzten wir das als untere Grenze was jeder erreichen muss.
+Na weil wir ohne diesen physikalischen Header wirklich null Plan haben von den restlichen Headern. Wir wüssten also auch nicht, ob wir oder wer anderes adressiert wurde. Deswegen setzten wir das als untere Grenze was jeder erreichen muss.
 
 ### _Physical Layer Convergence Protocol_ (PLCP)
 
