--- a/summaries/syscom/mit/wlan.mdx
+++ b/summaries/syscom/mit/wlan.mdx
@@ -122,7 +122,7 @@ Was sind die wichtigen Sachen:
 - Duration für RTS/CTS
 - Sequence Control 
 - CRC is klar
-- Bis zu 4 Addressen, für normallerweise immer Source, Destination und optional für BSSID oder receiver und transmitter. Welche wir angeben ist per `fromDS` `toDS` bits geregelt.
+- Bis zu 4 Addressen, für normalerweise immer Source, Destination und optional für BSSID oder receiver und transmitter. Welche wir angeben ist per `fromDS` `toDS` bits geregelt.
 
 ## Management
 
