--- a/summaries/syscom/mit/mhn.mdx
+++ b/summaries/syscom/mit/mhn.mdx
@@ -35,11 +35,11 @@ Daraus bauen wir nun 4 Routing Protokolle
 
 ### Dynamic Source Routing
 
-Wenn wir was senden wollen, senden wir vorher ein `RREQ` route request mit dem Ziel und ner ID. Das breitet sich dann im Netzwerk wie folgt aus indem man seine Addresse auf die Liste setzt und an alle weiter schickt. Wir merken uns alles ein bisschen damit wir in kein Loop kommen und das Ziel sendet eine `RREP` and den ersten, und der dann zum nächsten bis zu uns zurück.
+Wenn wir was senden wollen, senden wir vorher ein `RREQ` route request mit dem Ziel und ner ID. Das breitet sich dann im Netzwerk wie folgt aus indem man seine Addresse auf die Liste setzt und an alle weiter schickt. Wir merken uns alles ein bisschen damit wir in kein Loop kommen und das Ziel sendet eine `RREP` an den ersten, und der dann zum nächsten bis zu uns zurück.
 
 //TODO DSR gif
 
-Jaja ist immernoch nicht gut und es gibt noch paar weitere Verbesserungen wenn juckts. Es ist halt immernoch Flooding und das Dauert auch ein Weilchen
+Jaja ist immernoch nicht gut und es gibt noch paar weitere Verbesserungen wen juckts. Es ist halt immernoch Flooding und das Dauert auch ein Weilchen
 
 ### Ad-hoc On-demand Distance Vector routing (AODV)
 
