--- a/summaries/syscom/mit/wlan.mdx
+++ b/summaries/syscom/mit/wlan.mdx
@@ -1,130 +1,102 @@
 ---
 title: Gib mal WLAN Kabel
-description: 
-tags: []
+description: Immer noch keine Erklärung für Eduroams Zustand
+tags: [WIFI]
 order: 3
 author: Jonas Schneider
 ---
 
-Hier Tabelle lern du opfer:
+So ich gehe hier mal durch wie man im normalfall operieren würde. Also optimiert für die Vorlesung, später kommen dann noch paar extra Fälle.
 
-WIFI Netzwerke können entweder:
-1. Mehrere Access Points verbunden in einem Netzwerk sein.
-2. AD-Hoc wie meine Kamera sich als Access Point ausgibt um mit gefühlten 1kbit/s das unschärfste Bild jemals zu kopieren
-3. Mesh. Die Access Points verbinden sich untereinander
+> Beachte die Bezeichnungen: Der Original WIFI Standard ist 802.11. Wir sprechen aber jetzt immer über Weiterentwicklungen. 802.11a oder 802.11b sind andere Standards! Ich schreibe hier deswegen og-802.11 für den ersten Standard um es klar zu halten.
 
-WIFI spielt nur auf MAC / PHY Ebene ab und sollte vollkommen transparent sein (so wie halt immer).
+![Ich wie ich den Infrarotmodus im Ad-Hoc beim originalem 802.11 nutze](/summary-assets/syscom/mit/infrared.jpg)
+
+Story:
+Du hast eine alte 802.11b Fritzbox $S_0$ gefunden, schaltest sie ein und verbindest drei Geräte $S_1, S_2, S_3$. Wenn du diese Fritzbox nun anschließt hat du ein WIFI Netwerk im Infastructure Modus erschaffen (wohl nur mit einem Access Point), Herzlichen Glückwunsch.
+
+Jetzt möchte dein Handy gerne eine Nachricht also ein IP-Packet senden. Wie üblich haben wir neue Header und Trailer in Reihenfolge nacheinander.
+
+1. 8 Byte: Zunächst der LLC Header mit Ethernet Informationen oder so. !! Dieser kommt im der Vorlesung 0 vor aber in der Übung idk.
+2. 24 Byte: Physical Layer Convergence Protocol (PLCP). Ist der MAC Header
+
+![PLCP Aufbau](/summary-assets/syscom/mit/plcp.png)
+
+	Was sehen wir: 4 Addressen, einen Trailer und ne Menge Flags. Das PLCP ist der Mac Header für alle WIFI-Arten egal ob 802.11a b oder was auch immer eduroam verwendet, es entählt also ein paar optionale Features die nicht umbedingt genutzt werden müssen. In unserem Fall brauchen wir nur die Addressen 1,2,3. Wir wählen das Flag `toDS` (Distribution System). Die erste Addresse enthält die BSSID, dann unsere MAC und dann MAC von der Fritzbox. 
+
+3. 24 Byte: Physical Header. Dieser unterscheidet sich von 
+
+![Phy Header](/summary-assets/syscom/mit/wifi-phy.png)
+
+	Hier übertragen wir zunächst ne Menge fixe Bitpattern um Zitat "Synchronization, gain setting, energy detection, frequency offset
+compensation" zu verstehen. Dann noch paar andere Sachen (wie gesagt Header Einzelheiten sind unnötig). Wichtig ist die Geschwindigkeit von 1 MBit/s. Wir regeln diesen Header runter, da wir ohne ihn nichts verstehen können. Wir müssen also gewährleisten, dass selbst deine extrem susse Alibaba Smart Energy Steckdose $S_3$ alles vom Header versteht. Weil der Header so wichtig ist, gibts dann auch noch ein CRC Header Fehlercheck.
 
 
-## Physical Layer
+So jetzt haben wir unser vollständiges Packet jetzt kommen die interessanten Sachen.
 
-1. Frequency Hopping FHSS: 
-2. Direct Sequence DSSS: Chipping (i.e. chipping xor data)
-3. Infrared: Nur für ad-hoc und selbst da kannte ich das nicht :/
+### Medium Access
 
-Gehen wir mal durch die Versionen durch (ich werde hier Sachen skippen ist safe nicht so relevant):
-1. 802.11b: DSSS mit adaptiver Modulation (angepasst an die _Signal-to-Noise ratio_). Max ~5.5M (theoretisch 11) bei 30m indoor. Bei 1 oder 2 Mbit werden 11bit Barker codes verwendet bei höhreren 8 bit CCK. Hier kommt es aber oft zu Channel interferenze bei den 13 Channels in DE. 2.5 GHz Bereich
+Guard Times / Inter Frame Spaces für eine Priorisierung von z.B. ACKs. 
+- SIFS: $10 \mu s$
+- ... nicht wichtig
+- DIFS: $50 \mu s$
 
-2. 802.11a: QFDM + 64-QAM kann höhere Datenraten bis zu 54Mbit aber niedrigere Reichweite. 5GHz Bereich.
-3. 802.11g: alles wie 802.11b nur statt DSSS nimmt man auch QFDM
-4. 802.11n: Bis zu 600Mbi und 70m-250m. Kompatibel mit allen vorigen und vereint somit 2.5 und 5GHz Bereich.
-	Was wurde gemacht? Kleinere Guard Spaces bei QFDM. Mehrere (4) Streams gleichzeitig mit 4 Antennen (nennt man MIMO). Optional breite Channels 40MHz.
-5. 802.11ac: Nur noch 5GHz bis zu 7 GBit. 8ter MIMO und 256-QAM.
-6. 802.11ax: 9.6 GBit/s. 1024-QAM. Mit kleinen Verbesserungen zum QFDM.
-7. 802.11be: 46 GBit/s. 4096-QAM. Optionale Breite Channel und weitere Verbessungen beim QFDM.
-8. 802.11bn: >100GBit/s? 8192-QAM. Kp.
+Wir wollen nun also senden... 
+Ich mache das hier möglichst penibel damit man es versteht. Um die Klausur zu bestehen braucht man es nicht umbedingt verstehen, aber ich wills (keine Garantie, dass das hier 100% korrekt ist).
 
-Medium Access:
-- CSMA/CA: CSMA with Collision Avoidance (nicht verwechseln mit CSMA/CD)
+Gehen wir die Fälle durch:
+1. Wir haben gerade gesendet (In diesem Moment kam das ACK). Jetzt müssen wir ein DIFS warten und suchen uns einen neuen random backoff aus. Hierfür nehmen wir uns eine Zufallszahl $n \sim \text{Uniform}(\{1, 2, \ldots, 31\})$ und warten dann $n \cdot 9/20 \mu s$. Die Logik hier hinter ist, das es eine bestimmte Anzahl von $9/20 \mu s$ slots gibt von denen wir auswählen (die Anzahl kann sich bei hohem Traffic aufkommen auf bis zu 1023 erhöhen, aber rechnet einfach mit 31). Wenn wir während des DIFS und des backoffs nichts gehört haben können wir senden. Was falls doch? kommt gleich
+2. Gerade sendet irgendwer. Jetzt wartest du bis das ACK kam. Dann wieder ein DIFS warten und random backoff. Falls du noch ein backoff zeitraum übrig hast (wie das zustande kommt kommt gleich) nutze das, sonst suche dir wie bei 1. ein neues aus. Genauso wie bei 1 gilt, wenn während der ganzen Zeit niemand sendet, sende (erst wenn dein Backoff fertig ist).
+3. Niemand sendet gerade. Dann ein DIFS warten und falls immer noch leer, sende. (Hier brauchen wir kein Backoff (also glaube ich))
+4. Wir senden gerade aber das ACK kommt nicht an. Wir gehen von einer Kollision aus und gehen zu Fall 1. für eine retransmission.
 
-Drei Strategien:
-1. CSMA/CA: DFWMAC-DCF CSMA/CA (standard). Distributed Coordination mit Carrier sensing, random backoff und ACKS wenns funktioniert hat. Must have
+Ok aber was wenn mir jemand beim warten dazwischen kreuzt. Egal ob beim DIFS oder beim backoff, merken wir uns den Rest unserer Backoff slots. Beim DIFS also der ganze (haben ja noch nicht angefangen backoff zu warten), falls wir schon 5 von 15 slots gewartet haben, merken wir uns 10. Dann warten wir bis die Übertragung des anderen zuende ist, also das ACK kommt und gehen dann zu Fall 2. Hier warten wir dann immer die Restliche zeit ab, es sei denn wir werden wieder gestört. Und so weiter und so weiter. 
 
-PS. Das ist wirklich eine brutale Abkürzung.
+Um die Frage direkt zu beantworten warum müssen wir in den Fällen 1 und 4 ein backoff machen? Wir wollen eine gewisse fairness gewährleisten. Damit wir nicht durchgehend senden, suchen wir uns nach einem senden immer einen backoff aus. Auch für retransmissions, damit wir nicht sofort wieder kollidieren. 
+Für die anderen Fälle gilt die intuition, dass das Backoff mit der zeit abnimmt und wir deswegen irgendwann senden können, da die gerade gesendet haben ja zufällig einen vermutlich höheres backoff wählen.
 
-2. Einen RTS/CTS: Modus für ready and clear to send anfragen. Häufig Implementiert aber selten genutzt
-3. Polling für garantiertes Zeug: Selten implementiert
 
-Wir haben drei verschiedene Guard Space größen:
-1. Short Inter Frame Space (SIFS): $10/16\mu s$
-2. PIFS: ~$30\mu s$
-3. DIFS: ~$50\mu s$
-
-Damit können wir auch Packete priorisieren.
-
-Fürs CSMA/CA hören wir min. ein DIFS lang und senden dann. Falls wir was hören warten wir ein DIFS+random backoff und versuchen es nochmal.
-Der Backoff ist ein vielfaches von einem time slot. Falls bei einem Backoff jemand anderes bereits sendet, stoppen wir und fangen von neu an aber mit dem Restlichen timeslots als unser neues Backoff.
-
-![CSMA/CA](/summary-assets/syscom/mit/csmaca.png)
-
-Wie gesagt sende ich ein ACK wenn ich was erfolgreich empfangen habe, beim timeout denke ich direkt an eine Collision.
+Wie läuft das mit dem ACKs? Wir senden unsere Daten, dann kommt ein SIFS ($10 \mu s$) und dann das ACK, ist der PHY header und 14 zusätliche Byte. Steht zwar nicht auf den Folien, aber in der Übung werden alle Bytes mit max 1 MBit/s in 802.11b übertragen.
 
 ![Got It](https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExc2RoMGo1ZDVuc3RtdGlpMzZveHMwdzVlZTNzdXU5bnc3bXcyNGx6cCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/syQ4KY566ul38mZioG/giphy.gif)
 
-Beim RTS/CTS kann ich Kollisionsfreiheit garantieren aber mit höherer Latenz. Das haben wir ja schonmal besprochen.
+Die Berechnung wie lange ein Frame braucht ist also im Durchschnitt (wegen Backoff)
+
+$DIFS [\mu s] + 31/2 \cdot \text{Backoff Slot Time} [\mu s] + 24 \cdot \frac{8 [Bit/Byte]}{1 [MBit/s]} + \text{Packetlänge} \cdot \frac{8 [Bit/Byte]}{\textit{Datenrate} [MBit/s]} + SIFS [\mu s] + (24+14) \cdot \frac{8 [Bit/Byte]}{1 [MBit/s]}$
+
+Das war jetzt WIFI mit dem Standard CSMA/CA.
+
+### CTS / RTS
+
+Wir haben jetzt bock zu experimentieren und machen deswegen MACA. Es gibt jetzt zusätzlich zum ACK die beiden Request/Clear to Send. RTS sind 20 Byte und CTS sind wie ACKs 14 Byte zusätzlich zum 24 Byte PHY. Auch die werden denke ich mit 1 Mbit/s bei 802.11b übertragen. Gehen wir auch hier kurz durch. Das ganze Backoff gedöhns ist gleich. Aber nachdem wir ein DIFS und unser Backoff gewartet haben machen wir ein RTS. Dann warten wir ein SIFS bekommen dann hoffentlich ein SIFS (falls nein kommt gleich) und könenn nach einem weiteren SIFS daten senden dann kommt ein SIFS später wieder das ACK.
+
+Wir können die schlechte Effizienz von MACA verbessern, indem wir es ermöglichen beim Datentransfer direkt noch etwas zu reservieren. Dann sieht das so aus. (contention = backoff)
 
 ![RTS-CTS](/summary-assets/syscom/mit/wifi-rts-cts.png)
 
-Das NAV hier bedeutet, das andere Stations das RTS und CTS mitbekommen haben und selber speichern wie lange das Medium reserviert ist. Fragmente erhalten hierbei nochmal neue Reservierungen, was die NAV(frag) erklärt. Die Fragmente ohne ACK werden sofort neuübertragen.
+Falls wir kein CTS bekommen haben wissen wir vom hidden station problem. Alle anderen Stations bekommen unsere RTS und CTS mit und können auch das exposed station problem erkennen und warten bis die Zeit die wir requested und bekommen haben im RTS/CTS um ist. Wer was angefragt und bekommen hat speichert jede Station im _Network Allocation Vector_. Damit weis jede Station ziemlich gut bis wann das Medium belegt ist. Muss danach nur noch ein DIFS warten und ein Backoff (oder den restlichen). So sollten nur noch bei RTS/CTS kollisienen entstehen.
+
+### Beacons
+
+Der Access Point $S_0$ sendet in regelmäßigen abständen Beacons aus. Wir halten uns aber ans Medium Access und warten bis das Medium frei ist! 
+Der Beacon enthält Informationen wie z.B. SSID (Der WIFI name den du in der Fritzbox einstellt) und anderes gedöhns. Es kann aber auch für Power Management genutzt werden. Wir wissen das diese Beacons in halbwegs regelmäßigen Abständen aber nicht zu oft  kommen. Unsere Steckdose kann also nun sagen:
+
+![Kannst du meine Sachen behalten bis zum nächsten Beacon?](/summary-assets/syscom/mit/uwu_emoji.png)
+
+Das macht das AP dann auch. Falls er was an $S_3$ schick wollte buffered er es selber und sagt beim nächsten Beacon frame: "Hey $S_3$ ich hab was für dich".
+$S_3$ kann damit nur Wach sein wenn der Beacon frame gleich kommt, im Beaconframe was für ihn war oder er selber was senden will.
 
 
-Noch mehr Informationen .
-TODO: 
+## Andere Netzwerktypen
 
-## BITS & BYTES
+Für z.B. Ad-Hoc Netzwerke geht das alles hier auch nur komplizierter. Da sind die Routing Protokolle für Ad-Hoc Netzwerke schon interessanter.
 
-> Es wurde mehrfach gesagt, dass die einzelnen bits in den Headern wirklich niemanden juckt. 
-
-Wir müssen aber alles "kennen" damit wir nichts vergessen wenn wir z.B. die tatsächliche Datenrate ausrechnen sollen. Deswegen gehen wir das jetzt einfach einmal ganz durch.
-
-Starten bei der Physikalischem Header
-
-### FHSS Frame Format
-
-1. Synchronization
-2. konstanter Start Frame Delimiter (SFD)
-3. Payload Length + CRC length
-4. Data Rate Payload
-5. Header CRC
-
-### DSSS 
-
-1. Sync
-2. SFD
-3. Data rate 
-4. Reserved
-5. Payload Length
-6. Header CRC
-
-in 802.11b bleibt es eigentlich genau so nur das wir halt 
-
-### 802.11a
-Wir verschmelzen ein bisschen den nächsten Schritt mit dem hier
-
-!> Wichtig ist, dass die Synchronization + SFD immer in 1 Mbit/s übertragen wird. Egal ob ich danach mit 48GBit WIFI 7 baller. Der Rest des Header wird eigentlich auch immer in 1 Mbit übertragen, außer beim Optimierten Shot-Frame-Format von 802.11b (da mit 2bit)
-
-?> Warum? 
-
-Na weil wir ohne diesen physikalischen Header wirklich null Plan haben von den restlichen Headern. Wir wüssten also auch nicht, ob wir oder wer anderes adressiert wurde. Deswegen setzten wir das als untere Grenze was jeder erreichen muss.
-
-### _Physical Layer Convergence Protocol_ (PLCP)
-
-Wir haben nun ja ganz verschieden Technologien auf der MAC-Ebene machen wir jetzt ein Header für alle WIFIs
+Wenn wir mehrere AP in unserem Infrastrukturnetzwerk haben, müssen wir darauf achten, dass wir eine Mobility Database haben (die zu uns kommendem Traffic sagt, mit welchem AP wir gerade verbunden sind) und ein eigenen DHCP Server (nicht im AP), da wir nicht IP wechseln dürfen wenn wir uns mit einem anderem AP verbinden. Hierzu ein bisschen mehr im Thema Mobile IP.
 
 
-![PLCP Frame](/summary-assets/syscom/mit/plcp.png)
+### Eduroam 
 
-- ACKS, CTS: (2 Frame Control) (2 Duration) (6 Rec. Addr) (4 CRC)
-- RTS: (2 Frame Control) (2 Duration) (6 Rec. Addr) (6 Trans. Addr) (4 CRC)
+Bitte füge hier die besten Eduroam memes ein...
 
-Was sind die wichtigen Sachen:
-- Frame Control naja brauch man halt
-- Duration für RTS/CTS
-- Sequence Control 
-- CRC is klar
-- Bis zu 4 Addressen, für normalerweise immer Source, Destination und optional für BSSID oder receiver und transmitter. Welche wir angeben ist per `fromDS` `toDS` bits geregelt.
 
-## Management
 
-Informationen werden durch ein Beacon-Frame verteilt z.B. SSID
-Power Management kann durch Wake-up patterns geregelt werden.
