mit: eduroam memes

--- a/summaries/syscom/mit/wlan.mdx
+++ b/summaries/syscom/mit/wlan.mdx
@@ -10,7 +10,7 @@ So ich gehe hier mal durch wie man im normalfall operieren würde. Also optimier
 
 > Beachte die Bezeichnungen: Der Original WIFI Standard ist 802.11. Wir sprechen aber jetzt immer über Weiterentwicklungen. 802.11a oder 802.11b sind andere Standards! Ich schreibe hier deswegen og-802.11 für den ersten Standard um es klar zu halten.
 
-![Ich wie ich den Infrarotmodus im Ad-Hoc beim originalem 802.11 nutze](/summary-assets/syscom/mit/infrared.jpg)
+![Ich wie ich den Infrarotmodus im Ad-Hoc Netzwerk beim originalem 802.11 nutze](/summary-assets/syscom/mit/infrared.jpg)
 
 Story:
 Du hast eine alte 802.11b Fritzbox $S_0$ gefunden, schaltest sie ein und verbindest drei Geräte $S_1, S_2, S_3$. Wenn du diese Fritzbox nun anschließt hat du ein WIFI Netwerk im Infastructure Modus erschaffen (wohl nur mit einem Access Point), Herzlichen Glückwunsch.
@@ -96,7 +96,14 @@ Wenn wir mehrere AP in unserem Infrastrukturnetzwerk haben, müssen wir darauf a
 
 ### Eduroam 
 
-Bitte füge hier die besten Eduroam memes ein...
+So habe mich lange genug zurückgehalten:
 
+![](/summary-assets/syscom/mit/eduroam_one_does_not_simply_connect.png)
 
+![](/summary-assets/syscom/mit/eduroam_scumbag.jpg)
 
+![](/summary-assets/syscom/mit/eduroam_im_fine.png)
+
+![](/summary-assets/syscom/mit/eduroam_cant_connect.jpg)
+
+> Hier könnte ihr Meme stehen...
