--- a/summaries/syscom/mit/aufgaben.mdx
+++ b/summaries/syscom/mit/aufgaben.mdx
@@ -1,8 +1,8 @@
 ---
 title: Nach Verständnis kommen Aufgaben
 description: 
-tags: [HIP]
-order: 6
+tags: [Aufgabenerklärung]
+order: 7
 author: Jonas Schneider
 ---
 
@@ -50,7 +50,7 @@ Beachte $ld(1+S/N) = x$ ist umstellbar zu $2^{x} = 1 + S/N$. Aber das sollte ja 
 Nehmt die Bandwidth aus c). Nun stellt Nyquist um, um die Modulation also $n$ zu erhalten. Wir runden das Ergebnissen natürlich zu einem Power of 2 nach oben. 
 
 
-> Wenn wir irgendwas mit bitrate oder bandwidth ausrechen sollen ist eigentlich immer nach Nyquist oder Shannon gefragt
+> Wenn wir irgendwas mit Bitrate oder bandwidth ausrechnen sollen ist eigentlich immer nach Nyquist oder Shannon gefragt
 
 ### 1.2a)
 
@@ -69,9 +69,9 @@ Hierfür ist es gibt es die Realitätsformel $P_{\text{receive}} = P_{\text{tran
 Unterschiedlichen wert einsetzten und vergleichen
 
 ### 1.2d)
-In sehr niedrigen Frequenzen haben wir eine geringe datenrate wegen der niedrigen Bandwidth. Außerdem ist die Range so krass das wir alles hören und somit nichts höhren würden.
+In sehr niedrigen Frequenzen haben wir eine geringe datenrate wegen der niedrigen Bandwidth. Außerdem ist die Range so krass das wir alles hören und somit nichts hören würden.
 
-Bei hohen haben wir extrem viel noise ein Blatt Papier schallert dein Signal ins Nirvana oder du Ionisierst deine Umgebund und gibst den Schwurblern recht.
+Bei hohen haben wir extrem viel noise ein Blatt Papier schallert dein Signal ins Nirvana oder du Ionisierst deine Umgebung und gibst den Schwurblern recht.
 
 
 ## 2
