--- a/summaries/syscom/mit/ip_and_mobility.mdx
+++ b/summaries/syscom/mit/ip_and_mobility.mdx
@@ -21,7 +21,7 @@ Wir kümmern uns jetzt wie wir Mobilität im Internet machen. Es gibt verschiede
 
 ## Mobile IP
 
-Ok Mobile Ip ist praktisch eine Umleitung von deinem Traffic zu deinem Zuhause und da weiß dein Router was deine tatsächliche Adresse ist und schickt es dir dann weiter. Jetzt folgt die Begrifserklärung
+Ok Mobile Ip ist praktisch eine Umleitung von deinem Traffic zu deinem Zuhause und da weiß dein Router was deine tatsächliche Adresse ist und schickt es dir dann weiter. Jetzt folgt die Begriffserklärung
 
 1. Mobile Node (MN): logisch um das Gerät handelt
 2. Home Agent: Irgendwas was an ist Zuhause. Meistens dein Router
