--- a/summaries/syscom/mit/mac.mdx
+++ b/summaries/syscom/mit/mac.mdx
@@ -43,9 +43,9 @@ Slotted Aloha ist etwas "besser" in dem der Start einer transmission mit einem Z
 
 #### Busy Tone
 
-Wenn der Receiver eine transmission erhält sendet er auf z.B. einem anderen Channel ein Busy Tone welches jeder in Reichweite dann checken kann. Das ist _Receiver initiated BTMA_ klappt natürlich erst wenn der Empfänger verstanden hat, dass er der Empfänger ist.
+Wenn der Receiver eine Transmission erhält, sendet er auf z.B. einem anderen Channel ein Busy Tone, welches jeder in Reichweite dann checkt. Das ist _Receiver initiated BTMA_ klappt natürlich erst wenn der Empfänger verstanden hat, dass er der Empfänger ist.
 
-Bei _Busy Tone Multiple Access_ (BTMA) senden alle die gerade etwas empfangen den Busy Tone nicht nur der eigentlich Empfänger. Beides zusammen geht auch _Wireless Collision Detect_
+Bei _Busy Tone Multiple Access_ (BTMA) senden alle die gerade etwas empfangen den Busy Tone nicht nur der eigentlich Empfänger. Beides zusammen geht auch aka _Wireless Collision Detect_
 
 
 #### _Multiple Access with Collision Avoidance_
@@ -60,7 +60,7 @@ Klappt halt nur wenn ich RTS und CTS mitbekomme. Geräte dürfen also nicht vern
 In schedule-based MAC Techniken ist die Zeit halt aufgeteilt und kann fix oder dynamisch auf die Stationen aufgeteilt werden
 
 #### _Demand Assigned Multiple Access_ DAMA
-Ein sender reserviert hier ein timeslot. Der Rest kann dann wie Aloha laufen
+Ein sender reserviert hier ein Timeslot. Der Rest kann dann wie Aloha laufen
 
 #### IEEE 802.15.4
 
