--- a/summaries/syscom/mit/mhn.mdx
+++ b/summaries/syscom/mit/mhn.mdx
@@ -29,7 +29,7 @@ Zudem
 Metriken können wir auch anpassen zum Beispiel die _expected tranmission count_
 $EXT = \frac{1}{FDR \cdot RDR}$. _FDR_: Wahrscheinlichkeit das ein Packet das Ziel erreicht. _RDR_: Gleiche fürn Rückweg (kann ja unterschiedlich sein *hust*Hidden Station*hust*)
 
-Oder wir nehmen $EXT \cdot S/B$ für die Zeit eines Packetes bei Bandbreite $B$.
+Oder wir nehmen $EXT \cdot S/B$ für die Zeit eines Packets bei Bandbreite $B$.
 
 Daraus bauen wir nun 4 Routing Protokolle
 
@@ -47,7 +47,7 @@ Hier machen wir das gleiche wie DSR aber wir merken uns auch noch ein kleines Ro
 
 ### Optimized Link State Routing
 Wir optimieren indem wir link states nur noch von manchen nodes erlauben.
-Wir erschaffen sogenante multipoint-relays, die nun für mehrere Nodes zuständig sind. Hierbei sind alle 2-hop-entfernten Geräte auch mit diesem Relay verbunden.
+Wir erschaffen so genante Multipoint-relays, die nun für mehrere Nodes zuständig sind. Hierbei sind alle 2-hop-entfernten Geräte auch mit diesem Relay verbunden.
 
 ### Destination Sequenced Distance Vector Routing
 
