--- a/summaries/es/swt/Entwurfsmuss-nicht-sein.mdx
+++ b/summaries/es/swt/Entwurfsmuss-nicht-sein.mdx
@@ -56,7 +56,7 @@ Ich werde hier ein bissle genauer als den üblichen Bullshit erklären, da ihr s
 
 ## Adapter (ist praktisch)
 
-<div className="center">![Adapter](/summary-assets/es/adapter-muster.png)</div>
+![Adapter](/summary-assets/es/adapter-muster.png)
 
 Der Adapter, verwendet eine Schnittstelle von dem Adaptee auf, und verändert diese gegebenenfalls. Somit wrappt der Adapter ein Adaptee (deswegen auch sehr sehr häufig Wrapper). Beispiel:
 
@@ -72,9 +72,7 @@ Den Adapter gibt es in 2 Formen:
 
 ## Composite (verwendet man häufig ohne drüber nachzudenken )
 
-<div className="center">
-  ![Composite](/summary-assets/es/composite-muster.png)
-</div>
+![Composite](/summary-assets/es/composite-muster.png)
 
 Composites werden verwendet, um eine Hierarchie darzustellen. Man versteckt den unterschied, zwischen einzelnen (Leafs) und zusammengesetzten Objekten.
 
@@ -84,7 +82,7 @@ Bespiele sind:
 
 ## Factory (wird in vielen Frameworks verwendet)
 
-<div className="center">![Factory](/summary-assets/es/factory-muster.png)</div>
+![Factory](/summary-assets/es/factory-muster.png)
 
 Eine Factory erstellt eine Instanz von einem Objekt, aber anders als bei einem Konstruktor, können hier unterschiedlich Typen erstellt werden.
 
@@ -94,9 +92,7 @@ Beispiel:
 
 ## Decorator (joa)
 
-<div className="center">
-  ![Decorator](/summary-assets/es/decorator-muster.png)
-</div>
+![Decorator](/summary-assets/es/decorator-muster.png)
 
 Der Decorator ist ein Wrapper, der ein Objekt umschließt und es verändert.
 Er ist ähnlich wie der Adapter, aber der Adapter verändert die Schnittstelle, während der Decorator das Objekt verändert (Der Decorator erbt von der Abstrakten Klasse ruft dann aber sein _base_ auf)
@@ -112,9 +108,9 @@ Ein Singleton ist eine Klasse, die nur einmal instanziiert werden (für die die 
 Wie wird das gemacht bsp. Java:
 
 <div className="line-numbers">
-  
+
 ```java
-  
+
 public class MySingleton {
   protected static MySingleton instance;
 
@@ -143,9 +139,7 @@ dass es nur einmal instanziiert wird. Falls es beim abrufen mit *getInstance()* 
 
 ## Observer (braucht man überall unter anderem bei UI Kram)
 
-<div className="center">
 ![Observer](/summary-assets/es/observer-muster.png)
-</div>
 
 Ein *Observer* ist ein Objekt, dass sich bei jeder Änderung eines anderen Objekts (*Observable*) benachrichtigen lässt.
 
@@ -156,9 +150,7 @@ Beispiel:
 
 ## CommandProcessor
 
-<div className="center">
-  ![CommandProcessor](/summary-assets/es/command-processor-muster.png)
-</div>
+![CommandProcessor](/summary-assets/es/command-processor-muster.png)
 
 Commands sind halt Befehle/Anweisungen, die der Processor dann ausführt. Viel mehr ist nicht zusagen.
 
