fix: buk summaries to figures

--- a/summaries/scil/buk/Turing-die-Maschine.mdx
+++ b/summaries/scil/buk/Turing-die-Maschine.mdx
@@ -13,9 +13,7 @@ date: 20/02/2023
 
 ### Turingmaschine
 
-<div className="center">
-  ![Wikipedia](https://upload.wikimedia.org/wikipedia/commons/c/c4/Turingmaschine.svg)
-</div>
+![Wikipedia](https://upload.wikimedia.org/wikipedia/commons/c/c4/Turingmaschine.svg)
 
 Die Turingmaschine, ist das wichtigste Hilfsmittel dieser Vorlesung, sie zu verstehen ist zwar erst die Grundvoraussetzung aber trotzdem.
 
@@ -91,10 +89,7 @@ Mehrspurige Turingmaschinen, sind einfach konvertierbar zu 1-Spurigen Turingmasc
 
 ### Mehrband Turingmaschine
 
-<div className="center">
-  ![Hail
-  Hydra](https://media.tenor.com/VBp7HvNSo2gAAAAd/lernaean-hydra-dungeons-and-dragons.gif)
-</div>
+![Hail Hydra](https://media.tenor.com/VBp7HvNSo2gAAAAd/lernaean-hydra-dungeons-and-dragons.gif)
 
 Der Unterschied zwischen Spur und Band ist der Kopf. Ein Band kann mehrere Spuren haben, heißt _ein_ Kopf ließt pro Lesevorgang ein Vektor also mehrere Symbole, kann aber nur auf allen Spuren gleichzeitig sich bewegen.
 
