--- a/summaries/scil/buk/Unterprogrammtech-nik.mdx
+++ b/summaries/scil/buk/Unterprogrammtech-nik.mdx
@@ -27,10 +27,7 @@ Also gibt es eine TM M, die D entscheidet, heißt sie akzeptiert alles in D und 
 
 Somit kann $D$ nicht entscheidbar sein.
 
-<div className="center">
-  ![Diagonal und
-  So](https://media.tenor.com/irYef4MZuYEAAAAC/matematica-rio-dicas-todo-dia.gif)
-</div>
+![Diagonal und So](https://media.tenor.com/irYef4MZuYEAAAAC/matematica-rio-dicas-todo-dia.gif)
 
 > Das Komplement von unentscheidbaren Problemen, ist selber unentscheidbar. Beispiel $\overline{D}$.
 
