fix: datkom summaries to figures

--- a/summaries/syscom/datkom/Vermittlung-vermittlungdeiner5.0.mdx
+++ b/summaries/syscom/datkom/Vermittlung-vermittlungdeiner5.0.mdx
@@ -218,7 +218,9 @@ x> Führe mit einer gegebenen Tabelle Dijkstra aus
 
 <Spoiler>Muss man halt üben xd</Spoiler>
 
-x> Aufgabe 7.3 a) Kosten für i) Untersee kabel benachteiligen, ii) Hohe Kapazität bevorzugen iii) load balancen ![A7.3](/summary-assets/syscom/A7.3.png)
+x> Aufgabe 7.3 a) Kosten für i) Untersee kabel benachteiligen, ii) Hohe Kapazität bevorzugen iii) load balancen
+
+![A7.3](/summary-assets/syscom/A7.3.png)
 
 <Spoiler>
   i)
